--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
+            <version>1.14.3-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
@@ -69,7 +69,7 @@
         </dependency>
         <dependency>
             <groupId>solar.rpg</groupId>
-            <artifactId>floatinganvil</artifactId>
+            <artifactId>skyblock</artifactId>
             <version>3.1.1</version>
         </dependency>
     </dependencies>
